k8s/apps/linkwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  namespace: linkwarden
  labels:
    app: linkwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      containers:
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: linkwarden-data
              mountPath: /data/data
      volumes:
        - name: linkwarden-data
          persistentVolumeClaim:
            claimName: linkwarden-data
