k8s/apps/linkwarden/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden-postgres
  namespace: linkwarden
  labels:
    app: linkwarden-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkwarden-postgres
  template:
    metadata:
      labels:
        app: linkwarden-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: linkwarden-postgres-data
