k8s/apps/linkwarden/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-postgres
  namespace: linkwarden
spec:
  type: ClusterIP
  selector:
    app: linkwarden-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
